tests/fsharp/typeProviders/negTests/EVIL_PROVIDER_GetStaticParameters_Null.bsl

EVIL_PROVIDER_GetStaticParameters_Null.fsx(7,18,7,80): typecheck error FS3051: The type provider 'Provider.EvilProviderWhereGetStaticParametersReturnsNull' reported an error: The type provider returned 'null', which is not a valid return value from 'GetStaticParameters'

EVIL_PROVIDER_GetStaticParameters_Null.fsx(7,18,7,80): typecheck error FS3051: The type provider 'Provider.EvilProviderWhereGetStaticParametersReturnsNull' reported an error: The type provider returned 'null', which is not a valid return value from 'GetStaticParameters'
